# rust-keyboard

./: .cargo  .gitignore  .gitmodules  Cargo.toml  LUFAConfig.h  Makefile  README.md  Ravedude.toml  ___-0028743.mm_profdata  atmega32u4-none.json  atmega32u4.json  avr_base-0028880.mm_profdata  unknown-crate-0028747.mm_profdata
.cargo/: config.toml
.helix/: languages.toml
avr-base/: Cargo.toml  atmega32u4.json
avr-base/src/: lib.rs  pins.rs  register.rs
eeprom-magic/: Cargo.toml
eeprom-magic/src/: lib.rs
eeprom_extractor/: Cargo.toml
eeprom_extractor/.cargo/: config.toml
eeprom_extractor/src/: main.rs
eeprom_magic/: Cargo.toml  eeprom.ld
eeprom_magic/src/: lib.rs
examples/common/: Makefile
examples/common/.cargo/: config.toml
examples/louwen/: Cargo.toml  atmega32u4-none.json  atmega32u4.json
examples/louwen/.cargo/: config.toml
examples/louwen/src/: main.rs
examples/rust_keyboard/: Cargo.toml  Makefile  autoflash.sh
examples/rust_keyboard copy/src/: main.rs
examples/rust_keyboard/.cargo/: config.toml
examples/rust_keyboard/src/: main.rs
examples/surv/: .cargo  .gitignore  Cargo.toml  LUFAConfig.h  autoflash.sh  build.rs
examples/surv/src/: main.rs
exemple/louwen/: Cargo.toml  Makefile  atmega32u4-none.json
exemple/louwen/src/: main.rs
exemple/rust_keyboard/: Makefile
exemple/rust_keyboard/src/: main.rs
keyboard-macros/: Cargo.toml
keyboard-macros/src/: config.rs  constraints.rs  entry.rs  image.rs  lib.rs  progmem.rs
keyboard_constants/: Cargo.toml
keyboard_constants/src/: lib.rs  matrix.rs  pins.rs
keyboard_macros/: Cargo.toml
keyboard_macros/src/: config.rs  constraints.rs  entry.rs  image.rs  key_alias.rs  keymap.rs  lib.rs  pins.rs  progmem.rs
lufa-rs/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
lufa-rs-macros/: Cargo.toml
lufa-rs-macros/src/: hid_descriptor.rs  lib.rs
lufa-rs/lufa-rs-macros/: Cargo.toml  README.md
lufa-rs/lufa-rs-macros/src/: hid_descriptor.rs
lufa-rs/src/: lib.rs  macros.rs
omk/: .cargo  Cargo.toml  LUFAConfig.h  atmega32u4-none.json  atmega32u4.json
omk/.cargo/: config.toml
omk/src/: atomic.rs  graphics.rs  i2c.rs  interrupts.rs  keymap.rs  keys.rs  lib.rs  limited_storage.rs  matrix.rs  rotary_encoder.rs  serial.rs  timer.rs
omk/src/primitive/: bin_packed.rs  eeprom.rs  flat_matrix.rs  progmem.rs
omk/src/serial/: shared_memory.rs
omk/src/usb/: descriptors.rs  events.rs  mod.rs
qmk/: Cargo.toml
qmk/.cargo/: config.toml
qmk/src/: atomic.rs  graphics.rs  i2c.rs  init.rs  interrupts.rs  keymap.rs  keys.rs  lib.rs  matrix.rs  rotary_encoder.rs  serial.rs  timer.rs
qmk/src/primitive/: bin_packed.rs  eeprom.rs  flat_matrix.rs  integral.rs  mod.rs  progmem.rs
qmk/src/serial/: shared_memory.rs
qmk/src/usb/: descriptors.rs  events.rs  mod.rs
qmk_sys/: Cargo.toml
qmk_sys/src/: lib.rs  progmem.rs
rust_keyboard/: Cargo.toml
rust_keyboard/src/: main.rs
the_rest/: .gitignore  Cargo.toml
the_rest/.cargo/: config.toml
the_rest/avr-base/src/: lib.rs  register.rs
the_rest/eeprom_magic/: Cargo.toml  eeprom.ld
the_rest/eeprom_magic/eeprom_macro/: Cargo.toml
the_rest/eeprom_magic/eeprom_macro/src/: lib.rs
the_rest/images/: fontplate.xcf
the_rest/keyboard_macros/src/: lib.rs
the_rest/qmk/: Cargo.toml
the_rest/qmk/src/: lib.rs  timer.rs
the_rest/qmk/src/primitive/: eeprom.rs  flat_matrix.rs
the_rest/qmk/src/usb/: events.rs
the_rest/rust_keyboard/: Cargo.toml
the_rest/rust_keyboard/src/: main.rs
