[package]
name = "eeprom_extractor"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "eeprom-extract"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1"}
clap = { version = "4", features = ["derive"]}
goblin = { version = "0.9"}

[build-dependencies]
# Optional, used to print linker hints
