[package]
name = "lufa-rs"
description = "Rust bindings and utility macros for the LUFA library."
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = [ "embedded", "usb", "lufa", "bindings" ]
repository = "https://github.com/supersurviveur/lufa-rs"

[dependencies]
lufa_rs_macros = { version = "0.1.0", path = "./lufa-rs-macros" }
avr-progmem = "0.4.0"

[build-dependencies]
cc = "1.2.29"
bindgen = "0.72.0"
heck = "0.5.0"
syn = "2.0.104"
quote = "1.0.40"
which = "8.0.0"
