[package]
name = "omk"
version = "0.1.0"
edition = "2024"

[dependencies]
keyboard_macros = { path = "../keyboard_macros" }
lufa-rs = "0.1.0"
avr-base = { path = "../avr-base" }
avr_delay = { git = "https://github.com/avr-rust/delay", branch = "cycacc" }
num-traits = { version = "0.2.19", default-features = false }
pin-project = { git = "https://github.com/louwenus/pin-project" }

[build-dependencies]
eeprom_magic = { path = "../eeprom_magic"}
