[package]
name = "keyboard-louwen"
version = "0.1.0"
edition = "2024"

[dependencies]
eeprom-magic = { path = "../../eeprom-magic"}
keyboard-macros = { path = "../../keyboard-macros" }
omk = { path = "../../omk" }
avr-base = { path = "../../avr-base" }
lufa-rs = "0.1.0"
compiler_builtins = "0.1.160"
avr_delay = { git = "https://github.com/avr-rust/delay", branch = "cycacc" }

[profile.dev]
panic = "abort"
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = true

[profile.release]
panic = "abort"
lto = "fat"
opt-level = "z"
codegen-units = 1
debug = true
