[package]
name = "keyboard-surv"
version = "0.1.0"
edition = "2024"

[dependencies]
# eeprom-magic = { path = "../../eeprom-magic"}
# keyboard-macros = { path = "../../keyboard-macros" }
# omk = { path = "../../omk" }
# avr-base = { path = "../../avr-base" }
# lufa-rs = "0.1.0"
# compiler_builtins = "0.1.160"
# avr_delay = { git = "https://github.com/avr-rust/delay", branch = "cycacc" }
avr-device = { version = "0.8.1", features = ["atmega32u4", "rt"] }

panic-halt = "0.2.0"
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(surv_private)'] }
