[package]
name = "lufa_rs_macros"
description = "Proc macros for the lufa-rs crate."
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = [ "embedded", "usb", "lufa", "bindings" ]
repository = "https://github.com/supersurviveur/lufa-rs"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.101", features = [ "full" ] }
proc-macro2 = "1.0.95"
